small spacing issues

--- a/resources/less/front/article-content.less
+++ b/resources/less/front/article-content.less
@@ -19,7 +19,11 @@
     }
 
     figcaption {
-        @apply font-bold;
+        @apply font-bold mb-8;
+    }
+
+    img {
+        @apply mt-8;
     }
 
     a {
